--- a/.github/workflows/setup_acr_trigger.yml
+++ b/.github/workflows/setup_acr_trigger.yml
@@ -9,7 +9,7 @@ on:
 #   RESOURCE_GROUP
 #   CONTAINER_REGISTRY_NAME
 env:
- RESOURCE_GROUP: your-resource-group-name       #set this to your resource group name      
+ RESOURCE_GROUP: acrdemo12       #set this to your resource group name      
  CONTAINER_REGISTRY_NAME: your-registry-name    #set this to your container registry name
  
 jobs:
